2005-09-06  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.12.1.
	
==================== 2.12.0 ====================

2005-09-06  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.12.0.

2005-09-04  Danilo Segan  <danilo@gnome.org>

	* configure.in: Added "hy" (Armenian) to ALL_LINGUAS.

2005-08-24  Mark McLoughlin  <mark@skynet.ie>

	Fix crasher where a FAMConnection may have events for
	a monitor, even after the monitor may be cancelled.
	Patch from Ed Catmur <ed@catmur.co.uk> in bug #314369

	* libmenu/menu-monitor.c: (unregister_monitor_with_fam):
	Process any pending events after cancelling the monitor.

2005-08-22  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.11.93

==================== 2.11.92 ====================

2005-08-22  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.11.92.
	
2005-08-22  Mark McLoughlin  <mark@skynet.ie>

	Based on patch from Chris Lahey <clahey@ximian.com>
	in bug #313899

	* libmenu/entry-directories.c:
	(get_desktop_file_id_from_path): pass the DesktopEntryType
	instead of using EntryDirectory:entry_type which may
	be DESKTOP_ENTRY_INVALID with <LegacyDir>
	(entry_directory_foreach_recursive),
	(entry_directory_get_flat_contents): pass the appropriate
	entry type.

2005-08-18  Mark McLoughlin  <mark@skynet.ie>

	Patch from Federic Crozat <fcrozat@mandriva.com>

	* libmenu/entry-directories.c:
	(cached_dir_remove_reference): Fix infinite loop.

2005-08-18  Mark McLoughlin  <mark@skynet.ie>

	Fixes "duplicate entry" issue in bug #313624
	
	* libmenu/entry-directories.c:
	(handle_cached_dir_changed): Look up the CachedDir
	for the parent of whatever path we're being notified
	about - we could be getting notified about ourself
	being created/deleted.
	
2005-08-18  Mark McLoughlin  <mark@skynet.ie>

	Obfuscate this code some more. Basic issue is that if an
	EntryDirectory has a subdir which is also an EntryDirectory